cli-eks/service.yml
apiVersion: v1
kind: Service
metadata:
 name: streamlit-example-service
 labels:
   app: streamlit
spec:
 type: NodePort
 selector:
   app: streamlit
   tier: web
 ports:
 - port: 8501
   targetPort: 8501
